--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,34 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Node
+node_modules/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Next.js
+.next/
+out/
+dist/
 
-# vercel
-.vercel
+# Build
+*.log
+*.cache
+.vscode/
+.DS_Store
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Environnement
+.env
+.env.*.local
+
+# Fichiers perso
+tennis.mp4
+*.mp4
+*.avi
+*.mov
+
+# Système
+*.swp
+Thumbs.db
+ehthumbs.db
+desktop.ini
+
+# OS
+Icon?
+__MACOSX/
