--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
-    "next": "15.2.3",
+    "date-fns": "^4.1.0",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1"
